--- a/index.html
+++ b/index.html
@@ -1,12 +1,178 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
-</head>
-<body>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque natus nam magni quibusdam assumenda, illum ipsam. Ea deserunt atque distinctio iure, omnis, sapiente repudiandae odit alias id earum magnam eaque quod quas tempore rerum officiis, praesentium nesciunt velit! Necessitatibus quas nemo, adipisci minima exercitationem, enim aliquid eligendi voluptatibus doloribus officiis facilis maiores magnam porro atque doloremque recusandae. Nisi ullam maiores nam consectetur. Aspernatur in temporibus cumque labore quam totam ratione exercitationem, repellat dolore quisquam, hic minima necessitatibus obcaecati molestiae iusto nulla quos nemo commodi voluptas? Architecto aliquid quam quos harum quaerat assumenda beatae. Beatae magni sed accusamus eius, quis optio mollitia inventore magnam ad eveniet debitis odio natus provident soluta iure eligendi. Voluptate fugit expedita eveniet vero quae delectus, voluptatem reiciendis consectetur illum in dolor dolores tenetur dolore vitae unde at nostrum. Sequi alias est quia sunt ullam. Ipsum impedit, numquam praesentium dicta ea corrupti architecto! Ab repellat aut velit, provident beatae, doloribus voluptatem labore illo magni quaerat quis expedita et, dolore vero veritatis qui perferendis aspernatur inventore earum? Veritatis ipsa accusantium dolorem eum et omnis id cum inventore ullam! Dolor incidunt facere, iure sequi laborum aspernatur quos! Ea quia assumenda perferendis necessitatibus perspiciatis quis deserunt quos numquam temporibus, voluptatum recusandae sequi consectetur, cumque quibusdam rerum distinctio facere esse. Officiis saepe accusantium voluptatum, vel sed illum neque placeat ut molestiae eveniet nihil esse rerum perspiciatis dolorum, assumenda mollitia eum consectetur soluta natus aliquam omnis. Dignissimos quod asperiores rem, eligendi sed amet beatae facere consequuntur modi maxime consectetur, ab eaque accusantium exercitationem cumque? Possimus, nesciunt. Iure dolorem consectetur corporis fugit hic eaque maiores qui delectus molestiae! Recusandae obcaecati repellendus magnam quos molestias porro dolor, itaque nam in repudiandae alias vitae voluptas optio iusto veniam animi natus est perspiciatis quo laborum amet quia sunt voluptatibus eum! Iusto eveniet id qui pariatur. Voluptas commodi totam dolor incidunt, similique iste accusamus error unde deserunt eaque perspiciatis porro velit quisquam non possimus sequi sunt mollitia neque molestias quis! Aspernatur dolorum deleniti ad. Minima temporibus voluptatem in laudantium at amet velit saepe molestias! Suscipit, laboriosam reiciendis pariatur impedit aut soluta facere assumenda facilis sapiente. A odit unde possimus facilis obcaecati quam exercitationem maiores, architecto dolorem maxime, blanditiis inventore cupiditate vitae modi velit voluptatum rerum illum sapiente dicta? Impedit, ipsa vero omnis necessitatibus eligendi magni, fugit officia nam non aspernatur minima similique facere fugiat dolorum quod cumque incidunt dolorem. Quod nemo delectus facilis doloribus inventore nihil quasi.</p>
-</body>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+    <title>Scss Practice A to Z</title>
+  </head>
+  <body>
+    <div class="scss-content p-5">
+        <div class="container">
+            <h1 class="text-center border-bottom">Scss</h1>
+        </div>
+        <div class="card-columns">
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+            <div class="card bg-primary">
+              <div class="card-body text-center">
+                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
+              </div>
+            </div>
+          </div>
+    </div>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  </body>
 </html>
