--- a/index.html
+++ b/index.html
@@ -7,167 +7,29 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 
     <title>Scss Practice A to Z</title>
   </head>
   <body>
-    <div class="scss-content p-5">
-        <div class="container">
-            <h1 class="text-center border-bottom">Scss</h1>
-        </div>
-        <div class="card-columns">
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-            <div class="card bg-primary">
-              <div class="card-body text-center">
-                  <a class="text-white text-decoration-none" href="">sass variables tutorial</a>
-              </div>
-            </div>
-          </div>
+
+  <div class="header">
+    <div class="one-header">
+
     </div>
+    <div class="tow-header">
+
+    </div>
+  </div>
+  <div class="main">
+    <div class="side-barOne"></div>
+    <div class="side-barTow"></div>
+    <div class="side-barThere"></div>
+  </div>
+  <div class="last"></div>
+
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
